Shared: Scrollbar: Fix using wrong mixin

--- a/packages/shared/components/scrollbar/Scrollbar.module.scss
+++ b/packages/shared/components/scrollbar/Scrollbar.module.scss
@@ -111,7 +111,7 @@
     }
   }
 
-  @include tablet {
+  @include tablet-and-below {
     pointer-events: none;
 
     .thumb {
